--- a/app/src/main/res/layout/fragment_unit1.xml
+++ b/app/src/main/res/layout/fragment_unit1.xml
@@ -32,7 +32,7 @@
                 android:textSize="@dimen/h1"
                 android:textStyle="bold" />
 
-            <!--head 1-->
+            <!--head 1 Warm-up-->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -71,18 +71,18 @@
                 android:textStyle="normal" />
 
             <Spinner
-                android:id="@+id/spinner1"
+                android:id="@+id/u1spinner1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/padding8" />
 
             <Spinner
-                android:id="@+id/spinner2"
+                android:id="@+id/u1spinner2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
             <Spinner
-                android:id="@+id/spinner3"
+                android:id="@+id/u1spinner3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
